--- a/index.html
+++ b/index.html
@@ -4,44 +4,43 @@
 	<meta charset="UTF-8">
 	<title>Test</title>
 </head>
-<body>
-	<style>
-
-	.test {
-		padding:30px;
-		background:tomato;
-		font-family: sans-serif;
-		text-align: center;
-		color: white;
-		}</style>
-	<h1 class="test">
-
-		</h1>
-
-
-
-	<script src="js/jquery.min.js"></script>	
-
-	<script>
-		jQuery(document).ready(function($) {
-			jQuery.ajax({
-				url: 'http://www.richmiles.co.za/wp-json/posts/19',
-				type: 'GET'
-			})
-			.done(function(data) {
-				var test = data.content;
-				console.log(test);
-				jQuery('.test').append(test);
-
-			})
-			.fail(function() {
-				console.log("error");
-			})
-			.always(function() {
-				console.log("complete");
-			});
-
-		});
-	</script>
+<link rel="stylesheet" href="css/bootstrap.css">
+<link rel="stylesheet" href="css/bootstrap-theme.css">
+<style>
+	a {
+		cursor: pointer;
+	}
+</style>
+<body ng-app="helloworld">
+	<div class="app" ng-controller="HelloController">
+		<nav class="navbar navbar-default">
+			<div class="container-fluid">
+				<!-- Brand and toggle get grouped for better mobile display -->
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<a class="navbar-brand" href="#">Brand</a>
+				</div>
+				<!-- Collect the nav links, forms, and other content for toggling -->
+				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+					<ul class="nav navbar-nav">
+						<li ng-repeat="page in pages">
+							<a ng-click="toggle(page.content)"  >{{ page.title }}</a>
+						</li>
+					</ul>
+				</div><!-- /.navbar-collapse -->
+			</div><!-- /.container-fluid -->
+		</nav>
+		<div ng-bind-html="cont"></div>
+	</div>
+	<script src="js/angular.min.js"></script>	
+	<script src="js/angular-sanitize.min.js"></script>	
+	<script src="js/jquery.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>	
+	<script src="js/script.js"></script>
 </body>
 </html>
